Add new logic for import files (bonus tasks)

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -7,4 +7,6 @@
     <a asp-controller ="Folder" asp-action="Index">To root folder</a>
     <br />
     <a asp-controller ="Folder" asp-action="Folders">All Folders in DB</a>
+    <br />
+    <a asp-controller ="ImportExport" asp-action="Import">Import data</a>
 </div>
